--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
 	<groupId>com.bezkoder</groupId>
 	<artifactId>spring-boot-security-jwt</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-security-jwt</name>
-	<description>Demo project for Spring Boot Security - JWT</description>
+	<name>tsi-quiz</name>
+	<description>Demo project </description>
 <packaging>war</packaging>
 	<properties>
 	
-		<java.version>11</java.version>
+		
 	</properties>
 
 	<dependencies>
@@ -90,6 +90,20 @@
 
 	<build>
 		<plugins>
+		
+		
+		<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+    </configuration>
+</plugin>
+		
+		
+		
+		
 		<plugin>
 				<groupId>com.microsoft.azure</groupId>
 				<artifactId>azure-webapp-maven-plugin</artifactId>
