--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+			<dependency>
+  <groupId>org.postgresql</groupId>
+  <artifactId>postgresql</artifactId>
+
+</dependency>
 		<dependency>
     <groupId>org.docx4j</groupId>
     <artifactId>docx4j</artifactId>
