--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contxtual_creation=true
 spring.datasource.username= 
 spring.datasource.password= 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contxtual_creation=true
+
 
 spring.jpa.open-in-view=true
 
-spring.jpa.hibernate.ddl-auto= update
-spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # App Properties
