--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=
 spring.datasource.password= 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contxtual_creation=true
-
+spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.open-in-view=true
 
